StockTools: Popup, fixed right margin with scrollbar on windows.

--- a/samples/highcharts/studies/stocktools-gui/demo.css
+++ b/samples/highcharts/studies/stocktools-gui/demo.css
@@ -295,13 +295,17 @@
 }
 
 .highcharts-popup-lhs-col.highcharts-popup-lhs-full { 
-  width: calc(100% - 60px);
+  width: calc(100% - 52px);
   overflow-y: scroll;
   overflow-x: hidden;
   height: calc(100% - 120px);
   border: none;
   margin-top:40px;
   padding: 0px 20px 20px 20px;
+}
+
+.highcharts-popup-lhs-col.highcharts-popup-lhs-full + .highcharts-popup-bottom-row {
+  width: calc(100% - 32px);
 }
 
 .highcharts-popup-lhs-col {
